--- a/README.adoc
+++ b/README.adoc
@@ -774,6 +774,8 @@ Some common, idiomatic aliases are shown below:
 | Namespace | Idiomatic Alias
 | clojure.java.io
 | io
+| clojure.math
+| math
 | clojure.set
 | set
 | clojure.string
@@ -2135,6 +2137,21 @@ Try to use `swap!` rather than `reset!`, where possible.
 
 ;; not as good
 (reset! a 5)
+----
+
+== Math
+
+=== Prefer `clojure.math` Functions Over Interop [[prefer-clojure-math-over-interop]]
+
+Prefer math functions from `clojure.math` over (Java) interop or rolling your own.
+
+[source,clojure]
+----
+;; good
+(clojure.math/pow 2 5)
+
+;; okish
+(Math/pow 2 5)
 ----
 
 == Strings
