--- a/README.adoc
+++ b/README.adoc
@@ -34,7 +34,7 @@ We didn't come up with all the rules out of nowhere; they are mostly
 based on the experience of the style guide's editors,
 feedback and suggestions from numerous members of the Clojure community, and
 various highly regarded Clojure programming resources, such as
-https://www.clojurebook.com/["Clojure Programming"]
+http://www.clojurebook.com/["Clojure Programming"]
 and https://www.manning.com/books/the-joy-of-clojure-second-edition["The Joy of Clojure"].
 
 Nothing written here is set in stone.
@@ -3108,7 +3108,7 @@ Many people, books, presentations, articles and other style guides influenced th
 * https://google.github.io/styleguide/lispguide.xml[Google's Common Lisp Style Guide]
 * http://community.schemewiki.org/?scheme-style[scheme-style]
 * https://clojure.org/community/contrib_howto#_coding_guidelines[Clojure Library Coding Guidelines]
-* https://www.clojurebook.com/["Clojure Programming"]
+* http://www.clojurebook.com/["Clojure Programming"]
 * https://www.manning.com/books/the-joy-of-clojure-second-edition["The Joy of Clojure"]
 * https://elementsofclojure.com/["Elements of Clojure"]
 * https://pragprog.com/titles/vmclojeco/clojure-applied/["Clojure Applied"]
