--- a/README.adoc
+++ b/README.adoc
@@ -130,6 +130,7 @@ Some other good reasons to ignore a particular guideline:
 Translations of the guide are available in the following languages:
 
 * https://github.com/geekerzp/clojure-style-guide/blob/master/README-zhCN.md[Chinese]
+* https://github.com/ildivan/clojure-style-guide/blob/ita/README.adoc[Italian] (Under progress)
 * https://github.com/totakke/clojure-style-guide/blob/ja/README.adoc[Japanese]
 * https://github.com/kwakbab/clojure-style-guide/blob/master/README-koKO.md[Korean]
 * https://github.com/theSkilled/clojure-style-guide/blob/pt-BR/README.md[Portuguese] (Under progress)
